change --> less project cards in hot cards container in movile, position of illustration service card

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1700,6 +1700,9 @@ body P {
 .cards_hot_container .project_card:nth-of-type(2n) {
   display: none;
 }
+.cards_hot_container .project_card:nth-of-type(3n) {
+  display: none;
+}
 
 .cards_portfolio_container {
   grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
