add --> legal disclaimer and change first show legals instead of data alert

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1936,6 +1936,8 @@ body P {
   overflow: auto;
   scroll-behavior: smooth;
   padding-right: 1rem;
+  border-top: solid var(--FC) 4px;
+  padding: 1rem 1rem 0 0;
 }
 .modal .legal_modal .modal_info .more_btn {
   width: 100%;
@@ -2398,6 +2400,10 @@ body P {
 }
 .legals_section .link_text {
   line-height: 1.5;
+}
+.legals_section .copy_rights {
+  font-weight: 400;
+  color: var(--FC);
 }
 .legals_section .made_content {
   margin-left: 5rem;
