change --> project cards size and change responsive rules for show maximum content, check --> change hero bg css for img absolute position, check loading time in lighthouse

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -147,7 +147,7 @@
   --bgM: rgba(230, 230, 230, 0.75);
   --vueIconText: rgb(51, 51, 51);
   color: var(--TC);
-  --backgroundHero: linear-gradient(transparent, var(--bgC) 75%), url("../img/backgrounds/day.webp") center no-repeat fixed;
+  --backgroundHero: linear-gradient(transparent, var(--bgC) 75%) /* , url("../img/backgrounds/day.webp") center no-repeat fixed */;
   --bgHeaderSectionAbout: linear-gradient(var(--bgC), transparent, var(--bgC) 85%), url("../img/backgrounds/fondoBasketquot") center no-repeat fixed;
   --bgHeaderSectionAbout2: linear-gradient(var(--bgColorUT), var(--bgColor) 75%), url("https://images.pexels.com/photos/7130470/pexels-photo-7130470.jpeg") center no-repeat fixed;
   --bgHeaderSectionServices: linear-gradient(var(--bgC), transparent, var(--bgC) 85%), url("../img/backgrounds/office-932926_1920.jpg") center no-repeat fixed;
@@ -181,7 +181,7 @@
   --bgOff: rgb(51, 51, 51);
   --bgM: rgba(26, 26, 26, 0.75);
   --vueIconText: rgb(204, 204, 204);
-  --backgroundHero: linear-gradient(transparent, var(--bgC) 90%), url("../img/backgrounds/night.webp") center no-repeat fixed;
+  --backgroundHero: linear-gradient(transparent, var(--bgC) 90%) /* , url("../img/backgrounds/night.webp") center no-repeat fixed */;
   --bgHeaderSectionAbout: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/graffiti-background-1554703550MY5.jpg") center no-repeat fixed;
   --bgHeaderSectionServices: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/pexels-ovan-57690.jpg") center no-repeat fixed;
   --bgHeaderSectionPortfolio: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/workspace-1280538_1920.jpg") center no-repeat fixed;
@@ -1478,17 +1478,18 @@ body P {
   border-radius: 0.5rem;
   transition: var(--T_F);
   background: var(--bgC_T);
+  width: 100%;
 }
 .project_card .card_content {
   width: 100%;
 }
 .project_card .img_card {
   width: 100%;
-  height: 30rem;
+  height: 15rem;
   -o-object-fit: cover;
      object-fit: cover;
-  -o-object-position: top;
-     object-position: top;
+  -o-object-position: center;
+     object-position: center;
   border-radius: 0.5rem;
 }
 .project_card .info_card {
@@ -1545,7 +1546,7 @@ body P {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  height: 46rem;
+  height: 30rem;
   padding: 1rem;
 }
 .hot_project_card .info_card {
@@ -1694,7 +1695,7 @@ body P {
 }
 
 .cards_hot_container {
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 6fr));
   gap: 1rem;
 }
 .cards_hot_container .project_card:nth-of-type(2n) {
@@ -1705,7 +1706,8 @@ body P {
 }
 
 .cards_portfolio_container {
-  grid-template-columns: repeat(auto-fill, minmax(20rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(20rem, 8fr));
+  justify-content: center;
   gap: 0.5rem;
   overflow-y: auto;
   padding-top: 0.5rem;
@@ -2192,6 +2194,22 @@ body P {
   z-index: -1;
 }
 
+.hero_section .section {
+  position: relative;
+}
+.hero_section img {
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  display: inline-block;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -2;
+}
 .hero_section .bg_section {
   background: var(--backgroundHero);
 }
@@ -2221,6 +2239,14 @@ body P {
   min-width: 15rem;
   width: 20rem;
   max-width: 90%;
+}
+
+.light_theme .hero_section .dark_img {
+  display: none;
+}
+
+.dark_theme .hero_section .light_img {
+  display: none;
 }
 
 .about_section {
@@ -2640,13 +2666,10 @@ body P {
   .cards_service_container {
     grid-template-columns: repeat(2, 1fr);
   }
-  .cards_hot_container {
-    grid-template-columns: repeat(auto-fill, minmax(25rem, 1fr));
-  }
-  .cards_hot_container .project_card:nth-of-type(2n) {
+  .cards_hot_container .project_card:nth-of-type(3n) {
     display: flex;
   }
-  .cards_hot_container .project_card:nth-of-type(3n) {
+  .cards_hot_container .project_card:nth-of-type(2n) {
     display: none;
   }
   .flex_responsive {
@@ -2666,13 +2689,46 @@ body P {
   .cards_service_container {
     grid-template-columns: repeat(3, 1fr);
   }
-  .cards_hot_container {
-    grid-template-columns: repeat(auto-fill, minmax(30rem, 1fr));
+  .cards_hot_container .project_card:nth-of-type(2n) {
+    display: flex;
   }
   .cards_hot_container .project_card:nth-of-type(3n) {
     display: flex;
   }
+  .cards_hot_container .project_card:nth-of-type(4n) {
+    display: none;
+  }
   .flex_responsive {
     flex-direction: row;
+  }
+}
+@media screen and (min-width: 1124px) {
+  .cards_hot_container .project_card:nth-of-type(4n) {
+    display: flex;
+  }
+  .cards_hot_container .project_card:nth-of-type(2n) {
+    display: flex;
+  }
+  .cards_hot_container .project_card:nth-of-type(3n) {
+    display: none;
+  }
+}
+@media screen and (min-width: 1404px) {
+  .cards_hot_container .project_card:nth-of-type(3n) {
+    display: flex;
+  }
+  .cards_hot_container .project_card:nth-of-type(6n) {
+    display: none;
+  }
+}
+@media screen and (min-width: 1684px) {
+  .cards_hot_container .project_card:nth-of-type(2n) {
+    display: flex;
+  }
+  .cards_hot_container .project_card:nth-of-type(2n) {
+    display: flex;
+  }
+  .cards_hot_container .project_card:nth-of-type(6n) {
+    display: flex;
   }
 }
