--- a/src/css/style.css
+++ b/src/css/style.css
@@ -147,7 +147,7 @@
   --bgM: rgba(230, 230, 230, 0.75);
   --vueIconText: rgb(51, 51, 51);
   color: var(--TC);
-  --backgroundHero: linear-gradient(transparent, var(--bgC) 75%) /* , url("../img/backgrounds/day.webp") center no-repeat fixed */;
+  --backgroundHero: linear-gradient(transparent, var(--bgC) 75%), url("../img/backgrounds/day.webp") center no-repeat fixed;
   --bgHeaderSectionAbout: linear-gradient(var(--bgC), transparent, var(--bgC) 85%), url("../img/backgrounds/fondoBasketquot") center no-repeat fixed;
   --bgHeaderSectionAbout2: linear-gradient(var(--bgColorUT), var(--bgColor) 75%), url("https://images.pexels.com/photos/7130470/pexels-photo-7130470.jpeg") center no-repeat fixed;
   --bgHeaderSectionServices: linear-gradient(var(--bgC), transparent, var(--bgC) 85%), url("../img/backgrounds/office-932926_1920.jpg") center no-repeat fixed;
@@ -181,7 +181,7 @@
   --bgOff: rgb(51, 51, 51);
   --bgM: rgba(26, 26, 26, 0.75);
   --vueIconText: rgb(204, 204, 204);
-  --backgroundHero: linear-gradient(transparent, var(--bgC) 90%) /* , url("../img/backgrounds/night.webp") center no-repeat fixed */;
+  --backgroundHero: linear-gradient(transparent, var(--bgC) 90%), url("../img/backgrounds/night.webp") center no-repeat fixed;
   --bgHeaderSectionAbout: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/graffiti-background-1554703550MY5.jpg") center no-repeat fixed;
   --bgHeaderSectionServices: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/pexels-ovan-57690.jpg") center no-repeat fixed;
   --bgHeaderSectionPortfolio: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/workspace-1280538_1920.jpg") center no-repeat fixed;
@@ -2194,22 +2194,6 @@ body P {
   z-index: -1;
 }
 
-.hero_section .section {
-  position: relative;
-}
-.hero_section img {
-  position: absolute;
-  left: 0;
-  right: 0;
-  top: 0;
-  bottom: 0;
-  display: inline-block;
-  width: 100%;
-  height: 100%;
-  -o-object-fit: cover;
-     object-fit: cover;
-  z-index: -2;
-}
 .hero_section .bg_section {
   background: var(--backgroundHero);
 }
@@ -2239,14 +2223,6 @@ body P {
   min-width: 15rem;
   width: 20rem;
   max-width: 90%;
-}
-
-.light_theme .hero_section .dark_img {
-  display: none;
-}
-
-.dark_theme .hero_section .light_img {
-  display: none;
 }
 
 .about_section {
