--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -173,7 +173,7 @@
     color: var(--TC);
 
     //~ SECTION BACKGROUNDS--START
-    --backgroundHero: linear-gradient(transparent, var(--bgC) 75%) /* , url("../img/backgrounds/day.webp") center no-repeat fixed */;
+    --backgroundHero: linear-gradient(transparent, var(--bgC) 75%), url("../img/backgrounds/day.webp") center no-repeat fixed;
     --bgHeaderSectionAbout: linear-gradient(var(--bgC), transparent, var(--bgC) 85%), url("../img/backgrounds/fondoBasketquot") center no-repeat fixed;
     --bgHeaderSectionAbout2: linear-gradient(var(--bgColorUT), var(--bgColor) 75%), url("https://images.pexels.com/photos/7130470/pexels-photo-7130470.jpeg") center no-repeat fixed;
     --bgHeaderSectionServices: linear-gradient(var(--bgC), transparent, var(--bgC) 85%), url("../img/backgrounds/office-932926_1920.jpg") center no-repeat fixed;
@@ -214,7 +214,7 @@
     //¿GENERALS
 
     //~SECTION BACKGROUNDS
-    --backgroundHero: linear-gradient(transparent, var(--bgC) 90%) /* , url("../img/backgrounds/night.webp") center no-repeat fixed */;
+    --backgroundHero: linear-gradient(transparent, var(--bgC) 90%), url("../img/backgrounds/night.webp") center no-repeat fixed;
     --bgHeaderSectionAbout: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/graffiti-background-1554703550MY5.jpg") center no-repeat fixed;
     --bgHeaderSectionServices: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/pexels-ovan-57690.jpg") center no-repeat fixed;
     --bgHeaderSectionPortfolio: linear-gradient(var(--bgC) 10%, transparent, var(--bgC) 90%), url("../img/backgrounds/workspace-1280538_1920.jpg") center no-repeat fixed;
@@ -2228,21 +2228,6 @@ body {
     z-index: -1;
 }
 .hero_section {
-    .section {
-        position: relative;
-    }
-    img {
-        position: absolute;
-        left: 0;
-        right: 0;
-        top: 0;
-        bottom: 0;
-        display: inline-block;
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
-        z-index: -2;
-    }
     .bg_section {
         background: var(--backgroundHero);
     }
@@ -2274,20 +2259,6 @@ body {
             min-width: 15rem;
             width: 20rem;
             max-width: 90%;
-        }
-    }
-}
-.light_theme {
-    .hero_section {
-        .dark_img {
-            display: none;
-        }
-    }
-}
-.dark_theme {
-    .hero_section {
-        .light_img {
-            display: none;
         }
     }
 }
