--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1251,7 +1251,10 @@ body {
 .info_bubble {
     padding: 1rem;
     gap: 0.5rem;
-    text-align: center;
+    .description {
+        text-align: center;
+        line-height: 1.2rem;
+    }
 }
 .btn {
     padding: 1rem 0.5rem;
@@ -1483,12 +1486,11 @@ body {
     
 } */
 .service_card {
-    @include flexDirection(column, center, center);
-    height: 35rem;
+    @include flexDirection(column, flex-start, center);
+
     .info_card {
         width: 100%;
         max-width: 400px;
-        height: 15rem;
         padding: 1rem;
         .title {
             width: 100%;
@@ -1764,6 +1766,7 @@ body {
     grid-template-columns: 1fr;
     min-height: auto;
     gap: 1rem;
+    padding: 2rem 0;
 }
 .cards_hot_container {
     grid-template-columns: repeat(auto-fill, minmax(20rem, 6fr));
@@ -2653,7 +2656,7 @@ body {
         }
     }
     .flex_responsive {
-        @include flexDirection(row, center, denter);
+        @include flexDirection(row, center, center);
     }
     .flex_img {
         flex-basis: 30%;
