--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -2433,12 +2433,12 @@ body {
             margin-left: 2rem;
         }
     }
-    .footer_animation {
+    /*  .footer_animation {
         width: 100%;
         height: 30rem;
         background: var(--FC);
         padding-top: 4rem;
-    }
+    } */
 }
 .portfolio_section {
     .portfolio_btn {
