--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1831,13 +1831,14 @@ body {
     max-width: 100%;
 
     .list_btn {
-        background: var(--bgM);
         display: block;
-        text-transform: uppercase;
-        width: 100%;
-        padding: 0.5rem 3rem;
-        border-radius: 0.25rem;
         min-width: auto;
+        width: 100%;
+        background: var(--bgM);
+        border: none;
+        border-radius: 0.25rem;
+        text-transform: uppercase;
+        padding: 0.5rem 3rem;
         .label_btn {
             color: var(--TC);
             pointer-events: none;
@@ -1865,6 +1866,7 @@ body {
     .search_list_btn {
         text-transform: uppercase;
         @include flexDirection(row, center, center);
+        gap: 0.5rem;
         background: var(--bgM);
         border-radius: 0;
         border-bottom: solid 2px var(--FC);
@@ -1876,7 +1878,9 @@ body {
             line-height: 1;
         }
         .icon_container {
-            display: block;
+            display: flex;
+            justify-content: center;
+            align-items: center;
             height: 2rem;
             width: 2rem;
             padding: 0;
@@ -2173,11 +2177,13 @@ body {
         .author {
             font-size: var(--fontSizeMClamp);
             color: var(--SC);
-            font-weight: 600;
+            font-weight: var(--FW_B);
+            margin-bottom: 0.5rem;
         }
         .author_info {
             color: var(--TC);
             font-size: var(--fontSizeSClamp);
+            text-transform: capitalize;
         }
         .author,
         .author_info {
